# libscf

./: CMakeLists.txt  README.md  c2h6.xyz  c6h12.xyz  ch4.xyz  h2.xyz  h2o.xyz  main.cpp  main.cpp~
basis/: STO-3G
src/: CMakeLists.txt  basisset.cpp  basisset.hpp  hf.cpp  hf.hpp  iwl.cpp  iwl.hpp  molecule.cpp  molecule.hpp  test.cpp  test.hpp  to_atomic_num.hpp
